--- a/src/base/SConscript
+++ b/src/base/SConscript
@@ -83,6 +83,8 @@ Source('loader/symtab.cc')
 
 Source('stats/group.cc')
 Source('stats/text.cc')
+if env['USE_HDF5']:
+    Source('stats/hdf5.cc')
 
 GTest('addr_range.test', 'addr_range.test.cc')
 GTest('addr_range_map.test', 'addr_range_map.test.cc')
