--- a/src/sim/SConscript
+++ b/src/sim/SConscript
@@ -38,6 +38,7 @@ SimObject('VoltageDomain.py')
 SimObject('System.py')
 SimObject('DVFSHandler.py')
 SimObject('SubSystem.py')
+SimObject('RedirectPath.py')
 
 Source('arguments.cc')
 Source('async.cc')
@@ -56,6 +57,7 @@ Source('init_signals.cc')
 Source('main.cc', tags='main')
 Source('port.cc')
 Source('python.cc', add_tags='python')
+Source('redirect_path.cc')
 Source('root.cc')
 Source('serialize.cc')
 Source('drain.cc')
