mem: Implement base QoS Policies.
This patch implements a base fixed priority policy and an ideal
turnaround policy for the QoS memory controller.

Change-Id: I38ce16f845fc0ec86d6fc4cc5dc5406f213a465e
Signed-off-by: Giacomo Travaglini <giacomo.travaglini@arm.com>
Reviewed-on: https://gem5-review.googlesource.com/11972
Maintainer: Nikos Nikoleris <nikos.nikoleris@arm.com>
Reviewed-by: Nikos Nikoleris <nikos.nikoleris@arm.com>

--- a/src/mem/qos/SConscript
+++ b/src/mem/qos/SConscript
@@ -43,6 +43,8 @@ SimObject('QoSPolicy.py')
 SimObject('QoSTurnaround.py')
 
 Source('policy.cc')
+Source('policy_fixed_prio.cc')
+Source('turnaround_policy_ideal.cc')
 Source('q_policy.cc')
 Source('mem_ctrl.cc')
 Source('mem_sink.cc')
