--- a/src/systemc/core/SConscript
+++ b/src/systemc/core/SConscript
@@ -37,6 +37,7 @@ if env['USE_SYSTEMC']:
     Source('sc_event.cc')
     Source('sc_export.cc')
     Source('sc_interface.cc')
+    Source('sc_join.cc')
     Source('sc_main.cc')
     Source('sc_module.cc')
     Source('sc_module_name.cc')
