--- a/src/systemc/core/SConscript
+++ b/src/systemc/core/SConscript
@@ -32,6 +32,7 @@ if env['USE_SYSTEMC']:
 
     Source('kernel.cc')
     Source('module.cc')
+    Source('object.cc')
 
     Source('sc_attr.cc')
     Source('sc_event.cc')
