--- a/src/systemc/core/SConscript
+++ b/src/systemc/core/SConscript
@@ -30,6 +30,7 @@ Import('*')
 if env['USE_SYSTEMC']:
     SimObject('SystemC.py')
 
+    Source('channel.cc')
     Source('kernel.cc')
     Source('module.cc')
     Source('object.cc')
