--- a/src/systemc/core/SConscript
+++ b/src/systemc/core/SConscript
@@ -31,6 +31,7 @@ if env['USE_SYSTEMC']:
     SimObject('SystemC.py')
 
     Source('channel.cc')
+    Source('event.cc')
     Source('kernel.cc')
     Source('module.cc')
     Source('object.cc')
