systemc: Generalize working with the systemc python module from C++.
This change pulls the systemc python module creation code out of
sc_main and puts it into a more general purpose python.hh and
python.cc which can be used by other code to add other entries into
that module without having to track that in a central place.

This change also adds a mechanism for notifying C++ code that the
embedded python interpretter is up and ready to interact with in case
it needs to call some python only functionality. An example of that is
the code which tracks and then fixes the timescale for the simulator.

Change-Id: I9afcd5a089b21d23ebc1b5fdb6f643ae2f7e5f11
Reviewed-on: https://gem5-review.googlesource.com/12069
Reviewed-by: Gabe Black <gabeblack@google.com>
Maintainer: Gabe Black <gabeblack@google.com>

--- a/src/systemc/core/SConscript
+++ b/src/systemc/core/SConscript
@@ -37,6 +37,7 @@ if env['USE_SYSTEMC']:
     Source('object.cc')
     Source('process.cc')
     Source('process_types.cc')
+    Source('python.cc')
     Source('scheduler.cc')
 
     Source('sc_attr.cc')
