systemc: Improve scheduler cleanup.
Make the scheduler clear itself out when it's destructed to ensure that
nobody will try to use it after it's gone away. Also make sure there
are no pending events which might refer to it as well, either systemc
events or gem5 events.

Change-Id: I12dadc06bd9db7016a8dc0c1827b3e630b0d23d5
Reviewed-on: https://gem5-review.googlesource.com/12222
Reviewed-by: Gabe Black <gabeblack@google.com>
Maintainer: Gabe Black <gabeblack@google.com>

--- a/src/systemc/core/SConscript
+++ b/src/systemc/core/SConscript
@@ -39,6 +39,7 @@ if env['USE_SYSTEMC']:
     Source('process_types.cc')
     Source('python.cc')
     Source('scheduler.cc')
+    Source('sched_event.cc')
 
     Source('sc_attr.cc')
     Source('sc_event.cc')
