--- a/src/systemc/utils/SConscript
+++ b/src/systemc/utils/SConscript
@@ -33,4 +33,6 @@ if env['USE_SYSTEMC']:
     Source('sc_report_handler.cc')
     Source('sc_trace_file.cc')
     Source('sc_vector.cc')
+    Source('tracefile.cc')
+    Source('vcd.cc')
     Source('warn_unimpl.cc')
