systemc: Move some constants out of sc_time.cc for other files to use.
Change-Id: Ic88c6834dfe980022e58a3d859ea53193a55bbb1
Reviewed-on: https://gem5-review.googlesource.com/c/12971
Reviewed-by: Gabe Black <gabeblack@google.com>
Maintainer: Gabe Black <gabeblack@google.com>

--- a/src/systemc/core/SConscript
+++ b/src/systemc/core/SConscript
@@ -42,6 +42,7 @@ if env['USE_SYSTEMC']:
     Source('scheduler.cc')
     Source('sched_event.cc')
     Source('sensitivity.cc')
+    Source('time.cc')
 
     Source('sc_attr.cc')
     Source('sc_event.cc')
