systemc: Implement writer policies.
This includes the nonstandard SC_NO_WRITE_CHECK #define which the
Accellera tests use and depend on.

Change-Id: I106c4c16160325725a00d5c337047251817dca32
Reviewed-on: https://gem5-review.googlesource.com/c/13203
Reviewed-by: Gabe Black <gabeblack@google.com>
Maintainer: Gabe Black <gabeblack@google.com>

--- a/src/systemc/channel/SConscript
+++ b/src/systemc/channel/SConscript
@@ -35,4 +35,5 @@ if env['USE_SYSTEMC']:
     Source('sc_out_resolved.cc')
     Source('sc_mutex.cc')
     Source('sc_semaphore.cc')
+    Source('sc_signal.cc')
     Source('sc_signal_resolved.cc')
