systemc: Refactor reporting to prep for int based messages.
There's a deprecated reporting mechanism based on integer message ids,
and the reporting mechanism needs to be refactored a bit to make it
easier to support.

Some bookkeeping data structures were moved out to somewhere they
can be accessed by other code, obviating the non-standard get_handler
function.

Change-Id: Id427cd79be9ef0f3275fbac39ff047ab672fb3e0
Reviewed-on: https://gem5-review.googlesource.com/c/13318
Reviewed-by: Gabe Black <gabeblack@google.com>
Maintainer: Gabe Black <gabeblack@google.com>

--- a/src/systemc/utils/SConscript
+++ b/src/systemc/utils/SConscript
@@ -29,6 +29,7 @@ Import('*')
 
 if env['USE_SYSTEMC']:
     Source('functions.cc')
+    Source('report.cc')
     Source('sc_report.cc')
     Source('sc_report_handler.cc')
     Source('sc_trace_file.cc')
