--- a/src/systemc/utils/SConscript
+++ b/src/systemc/utils/SConscript
@@ -29,6 +29,7 @@ Import('*')
 
 if env['USE_SYSTEMC']:
     Source('functions.cc')
+    Source('messages.cc')
     Source('report.cc')
     Source('sc_report.cc')
     Source('sc_report_handler.cc')
