tests: Convert AddrRangeMap unit test to a GTest
Change-Id: Ifeb0b57c0cda77706691286f78325e50edb31c0d
Signed-off-by: Andreas Sandberg <andreas.sandberg@arm.com>
Reviewed-on: https://gem5-review.googlesource.com/c/13736
Reviewed-by: Jason Lowe-Power <jason@lowepower.com>
Reviewed-by: Giacomo Travaglini <giacomo.travaglini@arm.com>

--- a/src/base/SConscript
+++ b/src/base/SConscript
@@ -83,6 +83,7 @@ Source('loader/symtab.cc')
 Source('stats/text.cc')
 
 GTest('addr_range_test', 'addr_range_test.cc')
+GTest('AddrRangeMapTest', 'addr_range_map_test.cc')
 GTest('bituniontest', 'bituniontest.cc')
 GTest('CircleBufTest', 'circlebuftest.cc')
 
