systemc: Seperate out the sc_main fiber and its bookkeeping.
By pulling out the sc_main fiber (scMainFiber), we can make it
available to different entities in the simulator and avoid having to
have parallel bookkeeping.

Also this will make it possible to hook into sc_main without putting
the code in sc_main.cc.

Change-Id: I7689441424238e9b2e4d2b48e945dea35fd8cc5d
Reviewed-on: https://gem5-review.googlesource.com/c/13977
Reviewed-by: Jason Lowe-Power <jason@lowepower.com>
Maintainer: Gabe Black <gabeblack@google.com>

--- a/src/systemc/core/SConscript
+++ b/src/systemc/core/SConscript
@@ -50,6 +50,7 @@ if env['USE_SYSTEMC']:
     Source('sc_interface.cc')
     Source('sc_join.cc')
     Source('sc_main.cc')
+    Source('sc_main_fiber.cc')
     Source('sc_module.cc')
     Source('sc_module_name.cc')
     Source('sc_object.cc')
