--- a/src/systemc/core/SConscript
+++ b/src/systemc/core/SConscript
@@ -61,3 +61,6 @@ if env['USE_SYSTEMC']:
     Source('sc_simcontext.cc')
     Source('sc_spawn.cc')
     Source('sc_time.cc')
+
+    if env['USE_PYTHON']:
+        Source('sc_main_python.cc')
