base: Rename unit test cc files to be *.test.cc.
This makes the name easier to read, looks ok if the file is named with
underscores between words or not, is easy to grep for, and shouldn't
introduce any ambiguities in the file names.

Change-Id: I34b7bcccea2d87c10c0de417dd5e3ef27c4b5666
Reviewed-on: https://gem5-review.googlesource.com/c/14676
Reviewed-by: Giacomo Travaglini <giacomo.travaglini@arm.com>
Reviewed-by: Daniel Carvalho <odanrc@yahoo.com.br>
Maintainer: Gabe Black <gabeblack@google.com>

--- a/src/base/SConscript
+++ b/src/base/SConscript
@@ -40,26 +40,26 @@ Source('imgwriter.cc')
 Source('bmpwriter.cc')
 Source('callback.cc')
 Source('cprintf.cc', add_tags='gtest lib')
-GTest('cprintftest', 'cprintftest.cc')
+GTest('cprintftest', 'cprintf.test.cc')
 Source('debug.cc')
 if env['USE_FENV']:
     Source('fenv.c')
 if env['USE_PNG']:
     Source('pngwriter.cc')
 Source('fiber.cc')
-GTest('fibertest', 'fibertest.cc', 'fiber.cc')
-GTest('coroutinetest', 'coroutinetest.cc', 'fiber.cc')
+GTest('fibertest', 'fiber.test.cc', 'fiber.cc')
+GTest('coroutinetest', 'coroutine.test.cc', 'fiber.cc')
 Source('framebuffer.cc')
 Source('hostinfo.cc')
 Source('inet.cc')
 Source('inifile.cc')
-GTest('inifiletest', 'inifiletest.cc', 'inifile.cc', 'str.cc')
+GTest('inifiletest', 'inifile.test.cc', 'inifile.cc', 'str.cc')
 Source('intmath.cc')
 Source('logging.cc')
 Source('match.cc')
 Source('output.cc')
 Source('pixel.cc')
-GTest('pixeltest', 'pixeltest.cc', 'pixel.cc')
+GTest('pixeltest', 'pixel.test.cc', 'pixel.cc')
 Source('pollevent.cc')
 Source('random.cc')
 if env['TARGET_ISA'] != 'null':
@@ -69,7 +69,7 @@ Source('statistics.cc')
 Source('str.cc')
 Source('time.cc')
 Source('trace.cc')
-GTest('trietest', 'trietest.cc')
+GTest('trietest', 'trie.test.cc')
 Source('types.cc')
 
 Source('loader/aout_object.cc')
@@ -83,10 +83,10 @@ Source('loader/symtab.cc')
 
 Source('stats/text.cc')
 
-GTest('addr_range_test', 'addr_range_test.cc')
-GTest('AddrRangeMapTest', 'addr_range_map_test.cc')
-GTest('bituniontest', 'bituniontest.cc')
-GTest('CircleBufTest', 'circlebuftest.cc')
+GTest('addr_range_test', 'addr_range.test.cc')
+GTest('AddrRangeMapTest', 'addr_range_map.test.cc')
+GTest('bituniontest', 'bitunion.test.cc')
+GTest('CircleBufTest', 'circlebuf.test.cc')
 
 DebugFlag('Annotate', "State machine annotation debugging")
 DebugFlag('AnnotateQ', "State machine annotation queue debugging")
