systemc: Disable systemc when using gcc versions older than 5.0.
These versions don't support the std::put_time function. Since versions
of gcc older than 5.0 aren't going to be supported at all in the fairly
near future, this should only be temporary. The number of people using
both systemc and older versions of gcc should be very small, or even
zero.

Change-Id: Ie9572fdf83ba9569df6bc0457c98d86565dcdcd8
Reviewed-on: https://gem5-review.googlesource.com/c/14755
Reviewed-by: Jason Lowe-Power <jason@lowepower.com>
Reviewed-by: Giacomo Travaglini <giacomo.travaglini@arm.com>
Maintainer: Gabe Black <gabeblack@google.com>

--- a/src/systemc/SConscript
+++ b/src/systemc/SConscript
@@ -27,5 +27,15 @@
 
 Import('*')
 
+from m5.util import compareVersions
+from m5.util.terminal import termcap
+
 if env['USE_SYSTEMC']:
+    if compareVersions(env['GCC_VERSION'], '5.0') < 0:
+        print(termcap.Yellow + termcap.Bold +
+                'Warning: Disabling systemc on gcc versions less than 5.0.' +
+                termcap.Normal)
+        env['USE_SYSTEMC'] = False
+        Return()
+
     env.Append(CPPPATH=Dir('ext'))
