--- a/src/systemc/SConscript
+++ b/src/systemc/SConscript
@@ -31,7 +31,9 @@ from m5.util import compareVersions
 from m5.util.terminal import termcap
 
 if env['USE_SYSTEMC']:
-    if compareVersions(env['GCC_VERSION'], '5.0') < 0:
+    if 'GCC_VERSION' in env and \
+        compareVersions(env['GCC_VERSION'], '5.0') < 0:
+
         print(termcap.Yellow + termcap.Bold +
                 'Warning: Disabling systemc on gcc versions less than 5.0.' +
                 termcap.Normal)
