--- a/src/cpu/pred/SConscript
+++ b/src/cpu/pred/SConscript
@@ -39,6 +39,7 @@ DebugFlag('Indirect')
 Source('bpred_unit.cc')
 Source('2bit_local.cc')
 Source('btb.cc')
+Source('simple_indirect.cc')
 Source('indirect.cc')
 Source('ras.cc')
 Source('tournament.cc')
