tests: Rewrite Makefiles for pthreads test
The Makefiles for the pthreads test don't behave like typical
Makefiles that support cross compilation. Rewrite the Makefile to make
cross-compilation more convenient and add targets for aarch{32,64}.

Change-Id: I7cae378492681744b6bb11dd5af69db81ec54229
Signed-off-by: Andreas Sandberg <andreas.sandberg@arm.com>
Reviewed-on: https://gem5-review.googlesource.com/c/16022
Reviewed-by: Jason Lowe-Power <jason@lowepower.com>

--- a/tests/test-progs/pthread/Makefile.aarch32
+++ b/tests/test-progs/pthread/Makefile.aarch32
@@ -35,7 +35,7 @@
 #
 # Authors: Andreas Sandberg
 
-CROSS_COMPILE =
-BIN_DIR = bin.x86
+CROSS_COMPILE = arm-linux-gnueabihf-
+BIN_DIR = bin.aarch32
 
 -include Makefile.common
